--- a/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchHashtagsPage.xaml
+++ b/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchHashtagsPage.xaml
@@ -1,7 +1,39 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<local:BaseSearchHashtagsPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:microb_uy_mobile.Pages.BasePages"        
-             x:Class="microb_uy_mobile.Pages.Integrations.SearchPages.IntegrationsSearchHashtagsPage">
+             x:Class="microb_uy_mobile.Pages.Integrations.IntegrationsSearchHashtagsPage"
+             xmlns:local="clr-namespace:microb_uy_mobile.Pages.Integrations.SearchPages"
+             IconImageSource="search_icon_hashtag.png">
+    <ContentPage.Content>
+        <StackLayout>
+            <!-- Contenido específico de la pestaña "Hashtags" -->
+            <Grid>
+                <SearchBar x:Name="_searchBar" Placeholder="Buscar en microbuy" Grid.Column="0"/>
+                <Button Text="Buscar" Clicked="OnSearchButtonClicked" Grid.Column="1" WidthRequest="40" HeightRequest="40"  HorizontalOptions="EndAndExpand"/>
+            </Grid>
 
-</local:BaseSearchHashtagsPage>
+            <Label IsVisible="false" x:Name="NoResults" Text="Busca Hashtags!" FontAttributes="Bold" FontSize="16" TextColor="Black" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+
+            <!-- Colección y plantilla para la pestaña "Hashtags" -->
+            <CollectionView x:Name="SearchResultsHashtags" IsVisible="true" VerticalOptions="FillAndExpand" VerticalScrollBarVisibility="Always"
+                                ItemsSource="{Binding HashTagList}">
+                <CollectionView.ItemTemplate>
+                    <!-- SearchPageHashtags.xaml -->
+                    <DataTemplate>
+                        <Frame CornerRadius="10" HasShadow="True" BorderColor="#dddddd" BackgroundColor="White" Margin="10">
+                            <StackLayout Spacing="5">
+                                <!-- Encabezado del hashtag: Nombre del hashtag -->
+                                <StackLayout Orientation="Horizontal" Spacing="10">
+                                    <Image Source="hashtag_icon.png" HeightRequest="24" WidthRequest="24" VerticalOptions="Center" />
+                                    <Label Text="{Binding NombreHT}" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center" />
+                                </StackLayout>
+
+                                <!-- Descripción del hashtag -->
+                                <Label Text="{Binding Cantidad}" TextColor="Gray" LineBreakMode="WordWrap" />
+                            </StackLayout>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </StackLayout>
+    </ContentPage.Content>
+</ContentPage>
