--- a/microb_uy_mobile/Pages/MainTenant/NotificationsSettingsPage.xaml
+++ b/microb_uy_mobile/Pages/MainTenant/NotificationsSettingsPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="microb_uy_mobile.Pages.NotificationsSettingsPage"
+             x:Class="microb_uy_mobile.Pages.MainTenant.NotificationsSettingsPage"
              IconImageSource="settings_icon.png">
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand" Padding="20">
