--- a/microb_uy_mobile/Pages/MainTenant/TabMenu.xaml
+++ b/microb_uy_mobile/Pages/MainTenant/TabMenu.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:pages="clr-namespace:microb_uy_mobile.Pages"
+             xmlns:pages="clr-namespace:microb_uy_mobile.Pages.MainTenant"
              xmlns:integrations="clr-namespace:microb_uy_mobile.Pages.Integrations"
              xmlns:searchpages="clr-namespace:microb_uy_mobile.Pages.MainTenant.SearchPages"
              xmlns:local="clr-namespace:microb_uy_mobile"
